...
        super.viewDidLoad()
        view.backgroundColor = .secondarySystemGroupedBackground
        setupLabel()
    }

    private func setupLabel() {
        label.text = "Did Add Savings Goal"
        label.textAlignment = .center
        label.textColor = .secondaryLabel
        label.translatesAutoresizingMaskIntoConstraints = false
        label.lineBreakMode = .byWordWrapping
        label.numberOfLines = 0
        view.addSubview(label)
...
